parslers-benchmark/src/tests/invalid/semanticErr/variables/undeclaredScopeVar.wacc
# assignment to variable not declared in current scope

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  begin 
  int x = 5
  end ;
  x = 10
end
